--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,5 +5,8 @@ nav: true
 nav-order: 1
 
 title: Overview
-banner-title: Lexus The Design Collection
+
+banner:
+  title: Lexus
+  title-sub: The Design Collection
 ---
