--- a/_pages/city-guides/city-one/index.html
+++ b/_pages/city-guides/city-one/index.html
@@ -7,6 +7,10 @@ group-order: 1
 title: City One
 intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati aliquam doloremque maiores. Aliquam, voluptate, eligendi? Id nostrum sit voluptates saepe nam, dolorum repellat incidunt fugiat, sed ad a vel!
 
+banner:
+  title: "{{page.title}}"
+  title-sub: Design Guide
+
 features:
 
   - id: place
