WIP - design hotel content

--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -8,7 +8,7 @@ title: Design Hotels
 intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam ipsam aliquid facilis quasi, natus atque vel quae est cumque. Quasi excepturi laboriosam animi unde ad debitis fugiat ipsa distinctio eligendi.
 
 banner:
-  title: Top 10 design hotels of the world
+  title: Best Design Hotels in the World
 
 features:
 
