city guide intros

--- a/_pages/city-guides/edinburgh/index.html
+++ b/_pages/city-guides/edinburgh/index.html
@@ -5,7 +5,7 @@ group-parent: city-guides
 group-order: 2
 
 title: Edinburgh
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati aliquam doloremque maiores. Aliquam, voluptate, eligendi? Id nostrum sit voluptates saepe nam, dolorum repellat incidunt fugiat, sed ad a vel!
+intro: Discover the style of this northern capital, where heritage and craft meet art and modernity. Irresistibly picturesque, Edinburgh fosters art and design like no other city, pushing the envelope in the arts across a host of galleries and creative spaces. Discover it in our sunrise-to-sunrise design guide.
 
 banner:
   title: "{{page.title}}"
