--- a/_pages/city-guides/london/index.html
+++ b/_pages/city-guides/london/index.html
@@ -5,7 +5,7 @@ group-parent: city-guides
 group-order: 1
 
 title: London
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati aliquam doloremque maiores. Aliquam, voluptate, eligendi? Id nostrum sit voluptates saepe nam, dolorum repellat incidunt fugiat, sed ad a vel!
+intro: London is a powerhouse of trends and style, a melting pot for culture underpinned by the constant urge to create something new; in short, it’s a design lover’s dream, a look-book for anyone seeking inspiration. See the best of it in our sunrise-to-sunrise design guide.  
 
 banner:
   title: "{{page.title}}"
