city guides intro

--- a/_pages/city-guides/index.html
+++ b/_pages/city-guides/index.html
@@ -6,5 +6,5 @@ nav: true
 nav-order: 2
 
 title: City Guides
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis quo qui fugit quis eligendi, repudiandae nemo est, quasi molestiae perspiciatis adipisci, aperiam repellendus eveniet rem natus pariatur doloremque. Nisi, obcaecati.
+intro: Set out on an urban adventure with our sunrise-to-sunrise design guides. From London’s brutalist icons to Edinburgh’s burgeoning creative set, discover guides crafted for design lovers.
 ---
