--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -5,70 +5,60 @@ nav: true
 nav-order: 3
 
 title: Design Hotels
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam ipsam aliquid facilis quasi, natus atque vel quae est cumque. Quasi excepturi laboriosam animi unde ad debitis fugiat ipsa distinctio eligendi.
+intro: We’ve searched far and wide for the finest design hotels in the world. Where a concept-driven experience meets the finest architecture, interior and service, that is where you’re guaranteed something above indulgent five-star luxury. These hotels are as much about a perfect stay as they are about introducing you to something new, something beautiful, and something daring. Just see for yourself...
 
 banner:
   title: Best Design Hotels in the World
 
 features:
 
-  - id: hotel-name
-    title: Hotel One
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: pumphouse-point-hotel
+    title: Pumphouse Point Hotel
+    location: Tasmania, Australia
+    description: An obscure blob of white is surrounded in a wash of moody blue waters; this is Pumphouse Point Hotel, an old ‘30s hydroelectric station cast out in the middle of a beautiful forest lake. Taking the trip across the lengthy bridge is nothing short of cinematic. The interiors retain turn-of-the-century industrial features and effortlessly integrate them with understated modern flourishes. The views are stunning and the experience, out here, isolated in such natural beauty, is an unforgettable one...
 
-  - id: hotel-name
-    title: Hotel Two
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: treehotel
+    title: Treehotel
+    location: Harads, Sweden
+    description: Seven individually-designed treehouses hang in the forests of northern Sweden. Remarkable design reflects, hides, and playfully mirrors the forest setting – or, in the case of “UFO”, sticks out in such avant-garde fashion you could be forgiven for thinking you’ve entered some odd dreamscape. Inside each house, the tone is minimalist, never daring to distract from the main attraction – floor-to-ceiling windows that draw in spellbinding forest views.
 
-  - id: hotel-name
-    title: Hotel Three
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: the-siam
+    title: The Siam
+    location: Bangkok, Thailand
+    description: Indulge in art-deco elegance on the banks of the river Chaopraya. The white and black exterior, with its elongated windows and tower-like flanks, suggest some kind of jazz-age temple – a theme that the marbled and antique-filled interior continues. The wonderfully bright, galleried atrium is an impressive focal point, from which gorgeous rooms infuse the orient with turn-of-the-century style. Dark woods, freestanding baths, glorious amounts of light – The Siam perfects subtle elegance.
 
-  - id: hotel-name
-    title: Hotel Four
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: fogo-island-inn
+    title: Fogo Island Inn
+    location: Newfoundland, Canada
+    description: At the weather-beaten edge of Newfoundland sits a striking, stilted, monolith of modern design; this is the Fogo Island Inn. The nearby fishing village is juxtaposed against this remarkable piece of architecture, but that’s as far as the division goes. In fact, the hotel serves the local community as much as the locals serve the hotel, in a noteworthy relationship that has regenerated the area. The kitchens rely on the local’s fishing know-how and guests are offered tours by local guides. Each room draws floor-to-ceiling sea views, making the sleek, modern design of each seem almost as if one is floating along in the hippest cruise ship on the seas.
 
-  - id: hotel-name
-    title: Hotel Five
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: the-beekman
+    title: The Beekman
+    location: New York, USA
+    description: It’s rare for light to flood into a Manhattan townhouse; this light, here at the Beekman, becomes one of its most breathtaking assets. A pyramidal skylight floods the hotel’s atrium with the stuff, showing off the ornate detailing of each balcony, of each floor, as they stack atop each other and tower impressively over visiting guests. This is a definable “New York”-style elegance. The rooms follow suit, echoing turn-of-the-century glamour and simultaneously representing the melting pot of styles and influences that make the city so dynamic. To embody the flavour of a city so luxuriously is, by all accounts, a victory.
 
-  - id: hotel-name
-    title: Hotel Six
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: bisate-lodge
+    title: Bisate Lodge
+    location: Ruhengeri, Rwanda
+    description: In the vibrant jungles of Rwanda, against the slopes of a volcanic cone, a clutch of thatched huts keep watch over the valley. The design is informed by the aboriginal architecture of the King’s Palace at Nyanza, a basket-weave oddity that plays on the cultural heritage of the country. The interiors afford beautiful mountain-jungle views, volcanic-stone fireplaces, handwoven rugs and blankets and earthy tones and materials throughout. It’s luxury through and through – but it also has eco-credentials that make any stay as sympathetic to the beautiful Rwandan landscape as possible.
 
-  - id: hotel-name
-    title: Hotel Seven
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: mashpi-lodge
+    title: Mashpi Lodge
+    location: Pichincha, Ecuador
+    description: Deep in the beguiling cloud forests of Ecuador lies Mashpi Lodge, an eco-wonder of glass, steel and luxury. Forget hiking endlessly for animal encounters; here you can kick back in the jacuzzi and spot monkeys and birds from the comfort of your hot, bubbly indulgence. This wilderness retreat makes the most of its surroundings, with floor-to-ceiling windows throughout ensuring that the forest remains centre stage. Rooms are minimalist yet retain a luxury feel, never taking attention away from the breathtaking views that lie outside.
 
-  - id: hotel-name
-    title: Hotel Eight
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: royal-mansour
+    title: Royal Mansour
+    location: Marrakech, Morocco
+    description: This is Morrocan style at its most palatial. Quite literally, in fact; the intricate sprawl of intimate riads was commissioned by King Mohammed VI, employing a dizzying number of the country’s finest craftspeople to execute impeccably detailed interiors. Now, each riad offers an effortlessly luxurious stay, where gorgeous Moroccan tiling and opulent furnishings – nevermind the stupendously attentive service – make for a truly royal experience. The complex is connected in true medina pattern, with sunlit alleys connected by water features galore – a mesmerizing layout that is nothing short of spellbinding.
 
-  - id: hotel-name
-    title: Hotel Nine
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: awasi-patagonia
+    title: Awasi Patagonia
+    location: Magallanes, Chile
+    description: Patagonia has long been a byword for remote, evocative and wild landscapes. An adventure here is to re-interpret what it means to escape; an adventure to Awasi, perhaps more so. Understated cubist villas, perched on the hillside of a beautiful private reserve, use raw natural materials and clean modern lines to create a living space as earthly as the mindboggling views each affords. Each villa is also treated to a private guide with 4x4; each morning you can plan the day’s adventure, venturing into the wilderness of this beguiling landscape.
 
-  - id: hotel-name
-    title: Hotel Ten
-    location: Desination Name, Location Name
-    description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit deserunt officia quos, aperiam itaque et impedit! Possimus asperiores excepturi voluptates itaque dolorem nisi rerum veritatis. Iure magni dolorum libero laboriosam tempora saepe quos earum sunt velit natus illum ea quasi eos consectetur illo consequuntur sit asperiores reiciendis, voluptate nihil id tempore possimus, impedit rem. Provident.
-    link: "#hotel-link"
+  - id: deplar-farm
+    title: Deplar Farm
+    location: Ólafsfjörður, Iceland
+    description: Hiding in the serene landscape of Iceland’s far north, Deplar Farm is a luxury hotel like no other. Once a sheep farm, the dark-stained wood and windswept turf roof retain the rustic heritage of the location. Inside, however, a clean modernist vision adds a touch of refinement to the wild surroundings. Amenities are numerous; this place may be remote, but you’ll not be left wanting at the farm. Exquisite dining, private excursions deep into the wilds, salmon fishing and heli-skiing – Deplar Farm makes for a profoundly luxurious Icelandic getaway.
 ---
