--- a/_pages/competition/index.html
+++ b/_pages/competition/index.html
@@ -6,8 +6,8 @@ nav-order: 4
 no-test-drive-promo: true
 
 title: Competition
-long-title: Drive the Great Outdoors. Win your Escape to Another Place.
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error ipsum porro eius velit, possimus rerum officia sequi dolores, quo corrupti rem cumque facilis molestias, fugiat nihil voluptas qui aliquam quos.
+long-title: Win your very own design escape
+intro: Enter below to win a luxurious design break in the UK. You’ll have the chance to choose between two gorgeous hotels – whether you have a penchant for clean, scandi-inspired minimalism or elegant, heritage-meets-modern comfort, match the hotel to your style. You’ll have use of the new Lexus UX self-charging hybrid to complete your design escape.
 iframe-url: https://promotion0000.strutta.me
 enter-cta: Enter Now
 ---
