--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 6
 
 title: Lexus UX
-intro: For your next city escape, discover the all-new Lexus UX, a Self-Charging Hybrid that challenges everything that went before it with a brave new approach to crossover thinking. From its bold design expressing unmistakable strength, to its sculpted surfaces that are elegant, yet dynamic, the Lexus UX is perfect for urban exploration, in style.
+intro: Head for your next urban adventure with the all-new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
 
 intro-links:
 
