--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -25,7 +25,7 @@ features:
   - id: the-siam
     title: The Siam
     location: Bangkok, Thailand
-    description: Indulge in art-deco elegance on the banks of the river Chaopraya. The white and black exterior, with its elongated windows and tower-like flanks, suggest some kind of jazz-age temple – a theme that the marbled and antique-filled interior continues. The wonderfully bright, galleried atrium is an impressive focal point, from which gorgeous rooms infuse the orient with turn-of-the-century style. Dark woods, freestanding baths, glorious amounts of light – The Siam perfects subtle elegance.
+    description: Indulge in art-deco elegance on the banks of the river Chao Phraya. The white and black exterior, with its elongated windows and tower-like flanks, suggest some kind of jazz-age temple – a theme that the marbled and antique-filled interior continues. The wonderfully bright, galleried atrium is an impressive focal point, from which gorgeous rooms infuse the orient with turn-of-the-century style. Dark woods, freestanding baths, glorious amounts of light – The Siam perfects subtle elegance.
 
   - id: fogo-island-inn
     title: Fogo Island Inn
@@ -50,12 +50,12 @@ features:
   - id: royal-mansour
     title: Royal Mansour
     location: Marrakech, Morocco
-    description: This is Morrocan style at its most palatial. Quite literally, in fact; the intricate sprawl of intimate riads was commissioned by King Mohammed VI, employing a dizzying number of the country’s finest craftspeople to execute impeccably detailed interiors. Now, each riad offers an effortlessly luxurious stay, where gorgeous Moroccan tiling and opulent furnishings – nevermind the stupendously attentive service – make for a truly royal experience. The complex is connected in true medina pattern, with sunlit alleys connected by water features galore – a mesmerizing layout that is nothing short of spellbinding.
+    description: This is Moroccan style at its most palatial. Quite literally, in fact; the intricate sprawl of intimate riads was commissioned by King Mohammed VI, employing a dizzying number of the country’s finest craftspeople to execute impeccably detailed interiors. Now, each riad offers an effortlessly luxurious stay, where gorgeous Moroccan tiling and opulent furnishings – nevermind the stupendously attentive service – make for a truly royal experience. The complex is connected in true medina pattern, with sunlit alleys connected by water features galore – a mesmerizing layout that is nothing short of spellbinding.
 
   - id: awasi-patagonia
     title: Awasi Patagonia
     location: Magallanes, Chile
-    description: Patagonia has long been a byword for remote, evocative and wild landscapes. An adventure here is to re-interpret what it means to escape; an adventure to Awasi, perhaps more so. Understated cubist villas, perched on the hillside of a beautiful private reserve, use raw natural materials and clean modern lines to create a living space as earthly as the mindboggling views each affords. Each villa is also treated to a private guide with 4x4; each morning you can plan the day’s adventure, venturing into the wilderness of this beguiling landscape.
+    description: Patagonia has long been a byword for remote, evocative and wild landscapes. An adventure here is to re-interpret what it means to escape; an adventure to Awasi, perhaps more so. Understated cubist villas, perched on the hillside of a beautiful private reserve, use raw natural materials and clean modern lines to create a living space as earthly as the mind-boggling views each affords. Each villa is also treated to a private guide with 4x4; each morning you can plan the day’s adventure, venturing into the wilderness of this beguiling landscape.
 
   - id: deplar-farm
     title: Deplar Farm
