--- a/_pages/city-guides/edinburgh/index.html
+++ b/_pages/city-guides/edinburgh/index.html
@@ -47,11 +47,11 @@ features:
     time: "18:53"
     place: Timberyard
     title: It’s an irresistable rustic setting for artisanal feasting
-    description: Cast-iron pillars, exposed joists and whitewashed brickwork – Timberyard, true to its name, retains much of the industrial charm of its former life. It’s an irresistable rustic setting for artisanal feasting; the food here is sourced locally, from a network of foragers and suppliers that ensure each dishes’ creative composition is supported by delicious produce. The flavour combinations will surprise, reinventing classic Scottish ingredients with a flair that remains very popular.
+    description: Cast-iron pillars, exposed joists and whitewashed brickwork – Timberyard, true to its name, retains much of the industrial charm of its former life. It’s an irresistible rustic setting for artisanal feasting; the food here is sourced locally, from a network of foragers and suppliers that ensure each dishes’ creative composition is supported by delicious produce. The flavour combinations will surprise, reinventing classic Scottish ingredients with a flair that remains very popular.
 
   - id: the-lucky-liquor-co
     time: "21:12"
     place: The Lucky Liquor Co.
     title: promising cocktails in a rainbow of bright colours
-    description: Round off your Edinburgh adventure at The Lucky Liquor Co.; a loud neon sign outside is as good a signal as any, promising cocktails in a rainbow of bright colours. The interior is wonderfully minimalist, with the only discernable splashes of colour on display in generic, label-less glass bottles. A rotating menu of 13 cocktails allows the bartenders to push their creativity; some will be set on fire, others served in a lightbulb, and some mixed with ice cream – but there is substance behind the more showy elements. The menu constantly demands the best of its creators and the drinks reflect that. A fine finish, for sure.
+    description: Round off your Edinburgh adventure at The Lucky Liquor Co.; a loud neon sign outside is as good a signal as any, promising cocktails in a rainbow of bright colours. The interior is wonderfully minimalist, with the only discernible splashes of colour on display in generic, label-less glass bottles. A rotating menu of 13 cocktails allows the bartenders to push their creativity; some will be set on fire, others served in a lightbulb, and some mixed with ice cream – but there is substance behind the more showy elements. The menu constantly demands the best of its creators and the drinks reflect that. A fine finish, for sure.
 ---
