--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -14,7 +14,7 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Build your own UX
+  - title: Build your own Lexus UX
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 
   - title: Find Out More
@@ -36,7 +36,7 @@ features:
 
   - id: design
     title: Intelligent Design
-    description: The Lexus UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the UX is a stylish, sophisticated addition to your adventure.
+    description: The Lexus UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
