--- a/_pages/city-guides/london/index.html
+++ b/_pages/city-guides/london/index.html
@@ -5,7 +5,7 @@ group-parent: city-guides
 group-order: 1
 
 title: London
-intro: London is a powerhouse of trends and style, a melting pot for culture underpinned by the constant urge to create something new; in short, it’s a design lover’s dream, a look-book for anyone seeking inspiration. See the best of it in our sunrise-to-sunrise design guide.  
+intro: ondon is a powerhouse of trends and style, a melting pot for culture underpinned by the constant urge to create something new; in short, it’s a fascinating urban playground, a look-book for anyone seeking inspiration. See the best of it in our sunrise-to-sunrise design guide.
 
 banner:
   title: "{{page.title}}"
@@ -41,7 +41,7 @@ features:
     time: "16:33"
     place: Southbank
     title: the looming edifices of two brutalist icons
-    description: Take a stroll along the river; the looming edifices of two brutalist icons come into view. The Southbank Centre and National Theatre are intriguing structures, all staggered, pointed and sloping; under their walkways and ziggurat towers, a weekend street-food market is a great spot for lunch with river views to match. Leave the unique concrete skyline and head further down the river, until you hit the Tate Modern. Another London design icon, the old power station is a temple of contemporary art, now complemented by the angular twist of the Blavatnik building. Head for it and climb its modernist interior, making for the top-floor viewing platform where you can enjoy a drink with a gorgeous view of London.
+    description: Take a stroll along the river; the looming edifices of two brutalist icons come into view. The Southbank Centre and National Theatre are intriguing structures, all staggered, pointed and sloping; under their walkways and ziggurat towers, a weekend street-food market and a host of fine restaurants makes this a great spot for lunch – with river views to match. Leave the unique concrete skyline and head further down the river, until you hit the Tate Modern. Another London design icon, the old power station is a temple of contemporary art, now complemented by the angular twist of the Blavatnik building. Head for it and climb its modernist interior, making for the top-floor viewing platform where you can enjoy a drink with a gorgeous view of London.
 
   - id: barbican
     time: "18:53"
