--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -50,7 +50,7 @@ features:
   - id: royal-mansour
     title: Royal Mansour
     location: Marrakech, Morocco
-    description: This is Moroccan style at its most palatial. Quite literally, in fact; the intricate sprawl of intimate riads was commissioned by King Mohammed VI, employing a dizzying number of the country’s finest craftspeople to execute impeccably detailed interiors. Now, each riad offers an effortlessly luxurious stay, where gorgeous Moroccan tiling and opulent furnishings – nevermind the stupendously attentive service – make for a truly royal experience. The complex is connected in true medina pattern, with sunlit alleys connected by water features galore – a mesmerizing layout that is nothing short of spellbinding.
+    description: This is Moroccan style at its most palatial. Quite literally, in fact; the intricate sprawl of intimate riads was commissioned by King Mohammed VI, employing a dizzying number of the country’s finest craftspeople to execute impeccably detailed interiors. Now, each riad offers an effortlessly luxurious stay, where gorgeous Moroccan tiling and opulent furnishings – nevermind the stupendously attentive service – make for a truly royal experience. The complex is connected in true medina pattern, with sunlit alleys connected by water features galore – a mesmerising layout that is nothing short of spellbinding.
 
   - id: awasi-patagonia
     title: Awasi Patagonia
