guide content amends

--- a/_pages/city-guides/london/index.html
+++ b/_pages/city-guides/london/index.html
@@ -5,7 +5,7 @@ group-parent: city-guides
 group-order: 1
 
 title: London
-intro: ondon is a powerhouse of trends and style, a melting pot for culture underpinned by the constant urge to create something new; in short, it’s a fascinating urban playground, a look-book for anyone seeking inspiration. See the best of it in our sunrise-to-sunrise design guide.
+intro: London is a powerhouse of trends and style, a melting pot for culture underpinned by the constant urge to create something new; in short, it’s a fascinating urban playground, a look-book for anyone seeking inspiration. See the best of it in our sunrise-to-sunrise design guide.
 
 banner:
   title: "{{page.title}}"
@@ -14,49 +14,49 @@ banner:
 features:
 
   - id: bar-italia
-    time: "09:45"
+    time: "08:00"
     place: Bar Italia
     title: Embodies that mid-century kitsch that many emulate
     description: It’s early and you need coffee. Bar Italia embodies that mid-century kitsch that many emulate – only here it includes 70 years of heritage. This 24-hour Soho haunt serves up the finest, only-available-here roast in town. Just head for the strip neon, formica, worn and grooved pastel floor tiles, sipping the best espresso has to offer. Bar Italia is a place to see and be seen.
 
   - id: leighton-house
-    time: "10:19"
+    time: "09:00"
     place: Leighton House
     title: This is a statement piece through and through; and what a statement it is
     description: Tucked away in the mansion sprawls off Kensington High Street is Leighton House. The exterior hodge-podge of red brick, cupolas and conservatories offer some clue to the mind of the house’s creator. This is a statement piece through and through; and what a statement it is. The crowning glory is the Arab Hall – the style may be borrowed, but the execution and context elevate the design to breathtaking levels. Once, the whole house was adorned with Leighton’s fastidious collection of rare art, the house a temple for them to hang in all their splendour. A fair few were sold off after Leighton’s death (a fair few were stacked on chairs and propped against walls after all), but those that remain sink into the magnificent design of the building, becoming almost one with what many then, and now, would perceive as a shrine of art.
 
   - id: design-museum
-    time: "12:22"
+    time: "10:30"
     place: Design Museum
-    title: immerse yourself in the world’s most important design pieces of the last century
+    title: Immerse yourself in the world’s most important design pieces of the last century
     description: This guide would be nothing without mentioning the Design Museum. Under one angular, futuristic roof, immerse yourself in the world’s most important design pieces of the last century. The permanent exhibition, a crowdsourced wall of iconic consumer classics, offers a grounding context to a string of insightful exhibitions. Even the interior, a John Pawson project, is a masterful design statement, playful in its approach to light, angular like the older building it inhabits, and with leading lines that draw the eye as if it were a playground of shape and form.
 
   - id: va
-    time: "14:03"
+    time: "12:00"
     place: V&A
     title: Another temple of art and design
     description: Another temple of art and design, the V&A houses a fine collection of decorative arts. The way the collection is curated makes the V&A a goldmine of inspiration for designers and design-lovers; from the British Galleries to the Jewellery Gallery, the vast footprint offers seemingly endless treasures. Stand in awe at the monoliths of the Cast Courts, or enter with little intention or plan and lose yourself in the labyrinth of the museum’s many galleries; you’re guaranteed to find something special.
 
   - id: southbank
-    time: "16:33"
+    time: "14:00"
     place: Southbank
-    title: the looming edifices of two brutalist icons
+    title: The looming edifices of two brutalist icons
     description: Take a stroll along the river; the looming edifices of two brutalist icons come into view. The Southbank Centre and National Theatre are intriguing structures, all staggered, pointed and sloping; under their walkways and ziggurat towers, a weekend street-food market and a host of fine restaurants makes this a great spot for lunch – with river views to match. Leave the unique concrete skyline and head further down the river, until you hit the Tate Modern. Another London design icon, the old power station is a temple of contemporary art, now complemented by the angular twist of the Blavatnik building. Head for it and climb its modernist interior, making for the top-floor viewing platform where you can enjoy a drink with a gorgeous view of London.
 
   - id: barbican
-    time: "18:53"
+    time: "16:00"
     place: Barbican
     title: Britain’s most famous brutalist landmark
-    description: Arguably Britain’s most famous brutalist landmark, the Barbican Estate is a wonder of concept-driven social living – though ever divisive in the eyes of the public. Loathe it or love it, the harsh, angular concrete elevation carries an impressive gravity to it; walking its elevated walkways and looking over the lake with the suspended terraces of its coveted flats makes for a dramatic view. The towering residential spaces were well catered for, with a vast cultural centre hosting exhibitions, a huge cinema, cafes, bars and restaurants and the fashionable conservatory. Don’t miss the latter; the stubborn concrete galleries are juxtaposed by a flood of light and a wealth of tropical plant life, an oasis of calm. Sunday afternoon tea here is a highlight.
+    description: Arguably Britain’s most famous brutalist landmark, the Barbican Estate is a wonder of concept-driven social living – though ever divisive in the eyes of the public. Loathe it or love it, the harsh, angular concrete elevation carries an impressive gravity to it; walking its elevated walkways and looking over the lake with the suspended terraces of its coveted flats makes for a dramatic view. The towering residential spaces were well catered for, with a vast cultural centre hosting exhibitions, a huge cinema, cafés, bars and restaurants and the fashionable conservatory. Don’t miss the latter; the stubborn concrete galleries are juxtaposed by a flood of light and a wealth of tropical plant life, an oasis of calm. Sunday afternoon tea here is a highlight.
 
   - id: sketch
-    time: "21:12"
+    time: "20:00"
     place: Sketch
     title: Loud, eccentric & avant-garde
     description: It’s time to eat. There’s quite possibly no more concept-focused restaurant than Sketch; the loud, eccentric, avant-garde interiors (yes, there’s multiple) are fairytale and futuristic, playful and bold. From the Wes-Anderson-dreamscape pink room, the self-playing piano in the mystical forest, the egg pod loos, it’s all a grandiose setting for two-Michelin-star dining. In short, it has substance. The food is exquisite, the wine list award-winning. A cut above the rest.
 
   - id: the-connaught
-    time: "23:03"
+    time: "21:30"
     place: The Connaught
     title: A silver-leaf gilded embodiment of what a classy cocktail bar should be
     description: Before you head to your hotel, time for a nightcap. Where? The esteemed Connaught Bar of course. This smart, art-deco haunt exudes timeless elegance, a silver-leaf gilded embodiment of what a classy cocktail bar should be. And the critics agree; the awards are numerous. Most will recommend waiting for the Martini cart (which of course is a thing) to mix your drink tableside. Style has never been so effortless...
