--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 6
 
 title: Lexus UX
-intro: Head for your next urban adventure with the all-new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
+intro: Legg ut på ditt neste urbane eventyr med den helt nye Lexus UX, en selvladene hybrid som kombinerer innovativ design med lekkert håndverk. Kjør fra by til by og oppdag en verden av design i en bil skapt for byturer. Opplev stilen og luksusen til Lexus UX med en 24-timers prøvekjøring.
 
 intro-links:
 
@@ -14,48 +14,48 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Build your own Lexus UX
+  - title: Bygg din egen UX
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 
-  - title: Find Out More
+  - title: Finn ut mer
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
-feature-cta: Find Out More
+feature-cta: Finn ut mer
 
 features:
 
   - id: self-charge
-    title: No Plugs. No Diesel. No Compromise.
-    description: The Lexus UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by a fourth generation Lexus Self-Charging Hybrid with automatic transmission that features a 2.0 litre, four-cylinder petrol engine, powerful electric motor and newly developed hybrid transmission.
+    title: Ingen lading. Ingen diesel. Ingen kompromisser.
+    description: Lexus UX lader seg selv mens du kjører, så du trenger aldri å koble den inn noe sted. Det betyr at du får en helgetur helt uten avbrytelser. Du kjører med den fjerde generasjonens selvladende hybriden til Lexus, med automatgir som har en 2.0-liters, firesylindret bensinmotor, kraftfull el-motor og nyutviklet hybridteknologi.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: performance
-    title: Exhilarating Performance
-    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The new Lexus UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
+    title: Kraftig ytelse
+    description: Sett deg til rette med fullstendig oversikt og upåklagelig utsyn i denne moderne crossoveren. Med lavt tyngdepunkt og en stødig kropp byr UX på hårfin kjøredynamikk som du ikke forventer av en SUV. Nye Lexus UX kombinerer E-FOUR All Wheel Drive-ytelse med neste generasjons effektivitet og når inntil 0,41 per mil – perfekt for å spare noen kroner på en helgetur.
     link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
 
   - id: design
-    title: Intelligent Design
-    description: The Lexus UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
+    title: Intelligent design
+    description: Lexus UX er dramatisk og full av personlighet. Med sin dramatiske signaturgrill, den sporty silhuetten og bakendens distinkte design, sørger for at folk kommer til å snu seg når du passerer – dette er en helt ny crossover som er bygd for å utforske urbane omgivelser.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
-    title: Perfect for the City
-    description: The Lexus UX boasts the widest field of vision in its class, inspired by the Japanese architectural principle of ‘Engawa’, where the interior and exterior are seamlessly connected, allowing for a more harmonious coexistence with the environment. This clever design enables you to sense the size of the vehicle, so it’s easy to manoeuvre in the city.
+    title: Perfekt for byen
+    description: Designet er basert på det japanske arkitektoniske konseptet 'Engawa', der grensene mellom innendørs og utendørs sømløst føres sammen. I dette luksuriøse og sjåfør-fokuserte miljøet vil den romslige og trygge følelsen gjøre det enkelt å bevege seg rundt i byen.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: technology
-    title: Imaginative Technology
-    description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in Qi-compatible wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
+    title: Innovativ teknologi
+    description: Med Panorama 360° Multikamera kombineres bilder fra fire videokameraer, som gir deg fullstendig oversikt over bilen og omgivelsene i fugleperspektiv. Med trådløs lader i bilen slipper du styr med ledninger og kan enkelt lade smarttelefonen ved å legge den på laderen.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: saftey
-    title: Progress with Confidence
-    description: An advanced second generation Lexus Safety System+ keeps you and your passengers safe, with features including Dynamic Radar Cruise Control with Road Sign Assist, Pre-Collision System and Lane Tracing Assist. By complementing and reinforcing your driving abilities, Lexus Safety System + enhances your senses to ensure that you always feel confident on the journey ahead.
+    title: Forsett med selvtillit
+    description: I det nye Lexus Safety System+, har UX en utrolig omfattende forebyggende sikkerhetspakke, inkludert filassistanse, kollisjonsvernsystem og dynamisk cruisekontroll med skiltlesningassistanse. Lexus Safety System +, gjør at du kan føle deg selvsikker og trygg på reisen din.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: config
-    title: Configurator
-    description: With a range of options available, including the dynamic F SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
+    title: Konfigurator
+    description: Med en rekke valg mulige, inkludert den dynamiske F SPORT, kan du bygge den Lexus UXen som er perfekt for deg. Besøk hjemmesiden for å bygge din drømmebil i dag.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
