--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 6
 
 title: Lexus UX
-intro: Head for your next urban adventure with the all-new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
+intro: Åk iväg på nästa stadsäventyr i nya Lexus UX, en självladdande hybridbil som kombinerar innovativ design med fint hantverk. Kör från stad till stad och upptäck en värld av design i en bil skapad för cityvistelser. Upptäck stilen och lyxen med Lexus UX under ett dygns provkörning.
 
 intro-links:
 
@@ -14,48 +14,48 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Build your own Lexus UX
+  - title: Bygg din egen UX
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 
-  - title: Find Out More
+  - title: Läs mer
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
-feature-cta: Find Out More
+feature-cta: Läs mer
 
 features:
 
   - id: self-charge
-    title: No Plugs. No Diesel. No Compromise.
-    description: The Lexus UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by a fourth generation Lexus Self-Charging Hybrid with automatic transmission that features a 2.0 litre, four-cylinder petrol engine, powerful electric motor and newly developed hybrid transmission.
+    title: Inga uttag. Ingen diesel. Ingen kompromiss.
+    description: Lexus UX laddar sig själv medan du kör, så du behöver inte koppla in den någonstans, vilket innebär att du slipper uppehåll under din weekend. Du kör med fjärde generationens självladdande hybrid av Lexus, med automatisk växellåda som har en 2.0-liters, fyrcylindrig bensinmotor, kraftfull elmotor och nyutvecklad hybridväxel.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: performance
-    title: Exhilarating Performance
-    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The new Lexus UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
+    title: Kraftfull prestanda
+    description: En sittposition med utmärkt synfält i kombination med en låg tyngdpunkt och fast plattform ger en körupplevelse som du helt enkelt inte skulle förvänta dig av en modern crossover – smidig, kraftfull och lyhörd. Nya Lexus UX kombinerar E-FOUR All-Wheel Drive-prestanda med nästa generations effektivitet, når upp till 0,41 liter per mil, perfekt för att spara på bränsle under en weekendresa.
     link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
 
   - id: design
-    title: Intelligent Design
-    description: The Lexus UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
+    title: Intelligent design
+    description: Lexus UX är dramatisk och full av personlighet. Med karaktäristiska galler, sportig silhuett och djärv bakre design drar du blickarna till dig i staden. UX blir en elegant och sofistikerad del av ditt äventyr – en helt ny crossover-serie byggd för moderna och urbana vistelser.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
-    title: Perfect for the City
-    description: The Lexus UX boasts the widest field of vision in its class, inspired by the Japanese architectural principle of ‘Engawa’, where the interior and exterior are seamlessly connected, allowing for a more harmonious coexistence with the environment. This clever design enables you to sense the size of the vehicle, so it’s easy to manoeuvre in the city.
+    title: Perfekt för städer
+    description: Lexus UX stoltserar med det vidaste synfältet i sin klass, inspirerat av den japanska arkitektoniska principen "Engawa", där interiören och exteriören är sömlöst ihopkopplade, vilket möjliggör en mer harmonisk samexistens med miljön. Denna snygga design gör att du kan känna av fordonets storlek, vilket gör det lätt att köra i städer.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: technology
-    title: Imaginative Technology
-    description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in Qi-compatible wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
+    title: Uppfinningsrik teknologi
+    description: Njut av 360-graders fågelperspektiv över bilen och din omgivning från fyra videokameror med Panoramic View Monitor. Med en inbyggd Qi-kompatibel trådlös laddare slipper du sladdar, vilket möjliggör enkel laddning av smartphones genom att helt enkelt placera dem på laddaren, så att du kan ägna dig åt att utforska staden.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: saftey
-    title: Progress with Confidence
-    description: An advanced second generation Lexus Safety System+ keeps you and your passengers safe, with features including Dynamic Radar Cruise Control with Road Sign Assist, Pre-Collision System and Lane Tracing Assist. By complementing and reinforcing your driving abilities, Lexus Safety System + enhances your senses to ensure that you always feel confident on the journey ahead.
+    title: Kör med självförtroende
+    description: Ett avancerat andra generationens Lexus Safety System+ ser till att du och dina passagerare är trygga, med funktioner som Dynamic Radar Cruise Control med vägskyltassistent, förkollisionssystem och Lane Tracing Assist. Genom att komplettera och förstärka din körförmåga förbättrar Lexus Safety System+ dina sinnen för att säkerställa att du alltid känner dig trygg under resan.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: config
-    title: Configurator
-    description: With a range of options available, including the dynamic F SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
+    title: Konfigurator
+    description: Det finns en rad alternativ tillgängliga, inklusive dynamiska F SPORT, vilket innebär att du kan bygga en Lexus UX som är perfekt för dig. Besök hemsidan och börja konfigurera din drömbil idag.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
