--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 6
 
 title: Lexus UX
-intro: Head for your next urban adventure with the all-new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
+intro: Dirígete a tu próxima aventura urbana con el nuevo Lexus UX, un Híbrido Autorrecargable que incorpora un diseño innovador y una exquisita artesanía. Salta de ciudad en ciudad, descubriendo un mundo de diseño y artesanía en un vehículo hecho para escapadas urbanas. Descubre el estilo y el lujo del Lexus UX con una prueba de conducción de 24 horas.
 
 intro-links:
 
@@ -14,48 +14,48 @@ intro-links:
     td-modal: true
     main-cta: true
 
-  - title: Build your own Lexus UX
+  - title: Diseña tu propio UX
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 
-  - title: Find Out More
+  - title: Descubre más
     link: https://www.lexus.co.uk/car-models/ux/#hero
 
-feature-cta: Find Out More
+feature-cta: Descubre más
 
 features:
 
   - id: self-charge
-    title: No Plugs. No Diesel. No Compromise.
-    description: The Lexus UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by a fourth generation Lexus Self-Charging Hybrid with automatic transmission that features a 2.0 litre, four-cylinder petrol engine, powerful electric motor and newly developed hybrid transmission.
+    title: Sin enchufes. Sin diésel. Sin preocupaciones
+    description: El modelo Lexus UX se carga de forma automática mientras conduces. No tiene enchufes, lo cual significa que tu escapada no tendrá interrupciones. Los viajes estarán impulsados por una cuarta generación de Híbrido Autorrecargable Lexus con transmisión automática que cuenta con un motor de gasolina de 4 cilindros y 2 litros, un potente motor eléctrico y una transmisión híbrida de nuevo desarrollo.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: performance
-    title: Exhilarating Performance
-    description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The new Lexus UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
+    title: Rendimiento estimulante
+    description: "Una posición de asiento dominante con excelente visibilidad, junto con un centro de gravedad bajo y una plataforma rígida, brindan una experiencia de conducción que simplemente no se esperaría de un crossover moderno: ágil, potente y sensible. El nuevo Lexus UX yuxtapone el rendimiento de la tracción en las cuatro ruedas E-FOUR con una eficiencia de próxima generación, logrando hasta 68.9 mpg, ideal para ahorrar combustible durante una escapada de fin de semana."
     link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
 
   - id: design
-    title: Intelligent Design
-    description: The Lexus UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus UX is a stylish, sophisticated addition to your adventure.
+    title: Diseño inteligente
+    description: "Lexus UX es atrevido y está lleno de personalidad: con su distintiva parrilla, silueta deportiva y diseño audaz en la parte trasera, no dejarás de dar vueltas por la ciudad. UX es una nueva generación de crossover diseñada para escapadas urbanas en las que explorar nuevos horizontes. Una exquisita adición a tu moderna aventura."
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
-    title: Perfect for the City
-    description: The Lexus UX boasts the widest field of vision in its class, inspired by the Japanese architectural principle of ‘Engawa’, where the interior and exterior are seamlessly connected, allowing for a more harmonious coexistence with the environment. This clever design enables you to sense the size of the vehicle, so it’s easy to manoeuvre in the city.
+    title: Perfecto para la ciudad
+    description: Lexus UX cuenta con el campo de visión más amplio de su clase, inspirado en el principio arquitectónico japonés de ‘Engawa’, donde el interior y el exterior se conectan a la perfección, facilitando una convivencia más armoniosa con el medio ambiente. Este inteligente diseño te permite detectar el tamaño del vehículo, por lo que será sencillo maniobrar en la ciudad.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: technology
-    title: Imaginative Technology
-    description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in Qi-compatible wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
+    title: Tecnología imaginativa
+    description: Disfruta de vistas panorámicas de 360° del coche y de los alrededores a través de cuatro cámaras de vídeo con el Monitor de Vista Panorámica. No hay necesidad de navegar con cables. Y es que su cargador inalámbrico con tecnología Qi incorporada, te permite cargar smartphones de manera sencilla, tan solo colocándolos en el cargador. Esto te garantizará estar al máximo de batería, ¡y listo para explorar en todo momento!
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: saftey
-    title: Progress with Confidence
-    description: An advanced second generation Lexus Safety System+ keeps you and your passengers safe, with features including Dynamic Radar Cruise Control with Road Sign Assist, Pre-Collision System and Lane Tracing Assist. By complementing and reinforcing your driving abilities, Lexus Safety System + enhances your senses to ensure that you always feel confident on the journey ahead.
+    title: Progreso con seguridad
+    description: Un avanzado sistema de seguridad Lexus + de segunda generación te mantiene a ti y a tus pasajeros a salvo, con características que incluyen el Control de Crucero por Radar Dinámico con asistencia de señales de carretera, Sistema de Pre-colisión y Asistencia de Rastreo de Carril. Al complementar y reforzar tus habilidades de conducción, Lexus Safety System + mejora tus sentidos para garantizar que siempre te sientas seguro durante el viaje.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: config
-    title: Configurator
-    description: With a range of options available, including the dynamic F SPORT, you can build a Lexus UX that’s perfect for you. Visit the website to start configuring your dream Lexus UX today.
+    title: Configurador
+    description: Con una amplia gama disponible, incluyendo el dinámico F SPORT, puedes construir un Lexus UX perfecto para ti. Visita el sitio web para empezar a diseñar hoy mismo tu sueño Lexus UX.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
