--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 6
 
 title: Lexus UX
-intro: Head for your next urban adventure with the all-new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
+intro: Head for your next urban adventure with the all new Lexus UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus UX with a 24hr test drive.
 
 intro-links:
 
